# image-overlay

./: ICON_FIX_README.md  QUICK-START.md  README.md  SAVEPOINT.md  TAURI_BUILD_WHITEPAPER.md  TAURI_ICON_GUIDE.md  TEST_CHECKLIST.md  User_Manual_English.md  VERSION_1.4.8_SUMMARY.md  WINDOWS_FIX_README.md  analyze_current_dmg.sh  analyze_dmg.sh  build.sh  check_current_dmg.sh  clean_build.sh  clean_rebuild.sh  create-dmg-manual.sh  create-icons.sh  create_zip_distribution.sh  deep_analysis.sh  detailed_analysis.sh  diagnose_tauri.sh  final_verification.sh  fix_binary_name.sh  fix_dmg.sh  generate-icons.js  generate_icons.py  index.html  manual_dmg_create.sh  minimal_build.sh  package-lock.json  package.json  quick_test.sh  system_diagnosis.sh  test-build-fixed.sh  test_build.sh  work_log.md  다국어_지원_완료_보고서.md  사용설명서_한글.md  영문메뉴_완료보고서.md
.github/workflows/: README.md  build-fixed.yml  build-multiplatform.yml  build.yml
src/: languages.js  main.js
src-tauri/: Cargo.toml  Cargo_fixed.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
