[package]
name = "ImageOverlayTool"
version = "1.4.7"
description = "Image overlay tool with perfect Korean text support - by Eric"
authors = ["Eric <eon232@gmail.com>"]
license = ""
repository = ""
edition = "2021"

# 바이너리 이름 명시적 지정
[[bin]]
name = "ImageOverlayTool"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "protocol-all", "path-all", "dialog-all", "fs-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.7"
imageproc = "0.23.0"
base64 = "0.21.5"
rusttype = "0.9.3"
ab_glyph = "0.2.23"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# Windows 빌드 최적화 (GitHub Actions에서 환경변수로 처리)
# [target.x86_64-pc-windows-msvc] 섹션 제거 - GitHub Actions RUSTFLAGS와 충돌 방지
